--- a/backend/package.json
+++ b/backend/package.json
@@ -27,5 +27,8 @@
   "keywords": [],
   "author": "Mohd Asad Ansari",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
