--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.13.0",
     "html-react-parser": "^5.1.1",
     "html-to-text": "^9.0.5",
+    "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
