--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "sweetalert2": "^11.14.1",
+    "sweetalert2-react-content": "^5.0.7",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
