--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "axios": "^1.7.4",
     "cookies-js": "^1.2.3",
     "firebase": "^10.13.0",
+    "framer-motion": "^11.13.1",
     "html-react-parser": "^5.1.1",
     "html-to-text": "^9.0.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.468.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
